# tws

./: Makefile  Makefile.in  README  cgi.h  configure.ac  file.c  log.c  mime.types  net.h  setup.h.in  suexec.c  suexec_weak.c  util.c
suexec/: Makefile.in
suexec_weak/: Makefile.in  suexec_weak.c
tws/: Makefile.in  cgi.c  cgi.h  config.c  config.h  file.c  file.h  log.c  log.h  main.c  net.c  net.h  tws.conf.example  util.c  util.h
